--- a/index.html
+++ b/index.html
@@ -508,15 +508,10 @@
                 </div>
 
 
-                <div class="">
+                <div class="d-flex flex-column justify-content-center align-items-md-end">
                     <h5 class="text-light">Get App</h5>
-                    <div class="">
-                        <img src="./images/android.png" class="w-25 img-fluid" alt="">
+                        <img src="./images/android.png" class="w-25 img-fluid mb-1" alt="">
                         <img src="./images/ios.png" class="w-25 img-fluid" alt="">
-                    </div>
-
-
-
                 </div>
             </div>
 
